--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,6 @@
-API_ID=28689465
-API_HASH=fedd61d8e38f8afaed63c01b8438cbe4
-BOT_TOKEN=6359949876:AAFAuP9dq3RZJKzdeJ2l8AEhBY4mvjphcrs
+API_ID=
+API_HASH=
+BOT_TOKEN=
 OWNER_ID=6927241780
-MONGO_URL=mongodb+srv://flkjkffjxyuu:munna@cluster0.rnok4xh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=
 OWNER_USERNAME=GOD_R4V4N
